# prand

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  Makefile  multistream.c
header/: mrg32k3a.h  mrg32k3a_jump.h  mt19937.h  mt19937_jump.h  prand.h  randms.h
src/: CMakeLists.txt  mrg32k3a.c  mrg32k3a_jump.c  mt19937.c  mt19937_jump.c  mt19937_poly.c  prand.c  randms.c
src/header/: mrg32k3a_jump.h  prand.h
